--- a/src/main/resources/static/css/scss/pages/admin/_itemForm.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_itemForm.scss
@@ -1,21 +1,4 @@
-/* signUp page start */
-.add_item_header {
-    margin: 0px auto 60px;
-    position: relative;
-
-    h2 {
-        font-size: 15px;
-        text-align: center;
-    }
-
-    .divider {
-        width: 70px;
-        height: 1px;
-        background: #aaa;
-        margin: 20px auto;
-    }
-}
-
+/* itemForm page start */
 .add_item_body {
     display: flex;
     justify-content: center;
