--- a/src/main/resources/templates/account/findId.html
+++ b/src/main/resources/templates/account/findId.html
@@ -16,7 +16,7 @@
             <!-- signup section -->
             <section id="find_id">
                 <div class="container find_id">
-                    <div class="find_id_header">
+                    <div class="section_header">
                         <h2>아이디 찾기</h2>
                         <div class="divider"></div>
                     </div>
