--- a/src/main/resources/templates/account/findPass.html
+++ b/src/main/resources/templates/account/findPass.html
@@ -15,7 +15,7 @@
             <!-- signup section -->
             <section id="find_pass">
                 <div class="container find_pass">
-                    <div class="find_pass_header">
+                    <div class="section_header">
                         <h2>비밀번호 찾기</h2>
                         <div class="divider"></div>
                     </div>
