--- a/src/main/resources/templates/account/mypage.html
+++ b/src/main/resources/templates/account/mypage.html
@@ -15,7 +15,7 @@
             <!-- mypage section -->
             <section id="mypage">
                 <div class="container mypage">
-                    <div class="mypage_header">
+                    <div class="section_header">
                         <h2>MYPAGE</h2>
                         <div class="divider"></div>
                     </div>
