--- a/src/main/resources/templates/account/signUp.html
+++ b/src/main/resources/templates/account/signUp.html
@@ -15,7 +15,7 @@
             <!-- signup section -->
             <section id="signup">
                 <div class="container signup">
-                    <div class="signup_header">
+                    <div class="section_header">
                         <h2>JOIN</h2>
                         <div class="divider"></div>
                     </div>
