--- a/src/main/resources/templates/admin/item/itemDtl.html
+++ b/src/main/resources/templates/admin/item/itemDtl.html
@@ -14,7 +14,7 @@
 
             <section>
                 <div class="container">
-                    <div class="item_dtl_header">
+                    <div class="section_header">
                         <h2>상품 상세</h2>
                         <div class="divider"></div>
                     </div>
