--- a/src/main/resources/templates/admin/item/itemMng.html
+++ b/src/main/resources/templates/admin/item/itemMng.html
@@ -15,7 +15,7 @@
             <!-- items section -->
             <section id="item_mng">
                 <div class="container item_mng">
-                    <div class="item_mng_header">
+                    <div class="section_header">
                         <h2>상품 관리</h2>
                         <div class="divider"></div>
                     </div>
