--- a/src/main/resources/templates/admin/order/orderMng.html
+++ b/src/main/resources/templates/admin/order/orderMng.html
@@ -15,7 +15,7 @@
             <!-- orders section -->
             <section id="order_mng">
                 <div class="container order_mng">
-                    <div class="order_mng_header">
+                    <div class="section_header">
                         <h2>주문 관리</h2>
                         <div class="divider"></div>
                     </div>
