--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -15,7 +15,7 @@
             <!-- cart section -->
             <section id="cart">
                 <div class="container cart">
-                    <div class="cart_header">
+                    <div class="section_header">
                         <h2>CART</h2>
                         <div class="divider"></div>
                     </div>
