--- a/src/main/resources/templates/order/orderForm.html
+++ b/src/main/resources/templates/order/orderForm.html
@@ -15,7 +15,7 @@
             <!-- orderHist section -->
             <section id="order_form">
                 <div class="container order_form">
-                    <div class="order_form_header">
+                    <div class="section_header">
                         <h2>주문서 작성</h2>
                         <div class="divider"></div>
                     </div>
