--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -15,7 +15,7 @@
             <!-- orderHist section -->
             <section id="order_hist">
                 <div class="container order_hist">
-                    <div class="order_hist_header">
+                    <div class="section_header">
                         <h2>ORDER CHECK</h2>
                         <div class="divider"></div>
                     </div>
