--- a/src/main/resources/static/css/scss/pages/_orderHist.scss
+++ b/src/main/resources/static/css/scss/pages/_orderHist.scss
@@ -1,19 +1,4 @@
-.order_hist_header {
-    margin: 0px auto 60px;
-
-    h2 {
-        font-size: 15px;
-        text-align: center;
-    }
-
-    .divider {
-        width: 70px;
-        height: 1px;
-        background: #aaa;
-        margin: 20px auto;
-    }
-}
-
+/* orderHist page start */
 .order_hist_body {
     width: 100%;
     margin: 0 auto;
@@ -129,5 +114,4 @@
         font-weight: bold;
         border-bottom: 1px solid #e5e5e5;
     }
-
 }
