--- a/src/main/resources/static/css/scss/pages/admin/_itemMng.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_itemMng.scss
@@ -1,19 +1,4 @@
-.item_mng_header {
-    margin: 0px auto 60px;
-
-    h2 {
-        font-size: 15px;
-        text-align: center;
-    }
-
-    .divider {
-        width: 70px;
-        height: 1px;
-        background: #aaa;
-        margin: 20px auto;
-    }
-}
-
+/* itemMng page start */
 .item_mng_body {
     margin: 0 auto;
 
