--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -12,10 +12,10 @@
         <article class="content">
             <div th:replace="/layouts/defaultLayout.html :: nav"></div>
 
-            <!-- signup section -->
+            <!-- modify section -->
             <section id="modify">
                 <div class="container modify">
-                    <div class="modify_header">
+                    <div class="section_header">
                         <h2>MODIFY</h2>
                         <div class="divider"></div>
                     </div>
@@ -126,7 +126,7 @@
                             </table>
                             <div class="btn_box">
                                 <button class="modify_btn black_btn_w130_h40" type="submit">회원정보수정</button>
-                                <a class="white_btn_w130_h40" th:href="@{/}">취소</a>
+                                <button class="white_btn_w130_h40" type="button" onclick="cancelBtn()">취소</button>
                             </div>
                         </form>
                     </div>
@@ -376,6 +376,10 @@
                     $(".address_input_3").focus();
                 }
             }).open();
+        }
+
+        function cancelBtn() {
+            location.href = "/";
         }
     </script>
 </body>
