--- a/src/main/resources/templates/admin/item/itemEnroll.html
+++ b/src/main/resources/templates/admin/item/itemEnroll.html
@@ -14,7 +14,7 @@
 
         <section>
             <div class="container">
-                <div class="add_item_header">
+                <div class="section_header">
                     <h2 >상품 등록</h2>
                     <div class="divider"></div>
                 </div>
