--- a/src/main/resources/templates/admin/item/itemUpdate.html
+++ b/src/main/resources/templates/admin/item/itemUpdate.html
@@ -14,7 +14,7 @@
 
             <section>
                 <div class="container">
-                    <div class="add_item_header">
+                    <div class="section_header">
                         <h2>상품 수정</h2>
                         <div class="divider"></div>
                     </div>
