--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -9,7 +9,7 @@
     <main>
         <div th:replace="/layouts/adminLayout.html :: sidebar(currentMenu='home')"></div>
 
-        <article class="content">
+        <article class="admin_content">
             <div th:replace="/layouts/adminLayout.html :: nav"></div>
 
             <section id="admin_main">
@@ -56,7 +56,8 @@
                                         <i class="fa-solid fa-chart-simple"></i> 총 매출
                                     </div>
                                     <div class="card-body">
-                                        <span th:text="${#numbers.formatInteger(dashboardData.totalSales, 1, 'COMMA') + '원'}"></span>
+                                        <span
+                                            th:text="${#numbers.formatInteger(dashboardData.totalSales, 1, 'COMMA') + '원'}"></span>
                                     </div>
                                 </div>
                             </div>
@@ -107,25 +108,55 @@
                                     <div class="card-body">
                                         <table class="table">
                                             <thead>
-                                            <tr>
-                                                <th style="width: 10%;" scope="col">주문 번호</th>
-                                                <th style="width: 10%;" scope="col">이미지</th>
-                                                <th style="width: auto;" scope="col">상품정보</th>
-                                                <th style="width: 10%;" scope="col">주문 상태</th>
-                                                <th style="width: 10%;" scope="col">주문자 아이디</th>
-                                                <th style="width: 10%;" scope="col">주문 날짜</th>
-                                                <th style="width: 10%;" scope="col">취소</th>
-                                            </tr>
+                                                <tr>
+                                                    <th style="width: 10%;" scope="col">주문 번호</th>
+                                                    <th style="width: 10%;" scope="col">이미지</th>
+                                                    <th style="width: auto;" scope="col">상품정보</th>
+                                                    <th style="width: 10%;" scope="col">주문 상태</th>
+                                                    <th style="width: 10%;" scope="col">주문자 아이디</th>
+                                                    <th style="width: 10%;" scope="col">주문 날짜</th>
+                                                    <th style="width: 10%;" scope="col">취소</th>
+                                                </tr>
                                             </thead>
                                             <tbody>
-                                            <th:block th:each="order, status: ${orders.getContent()}">
+                                                <th:block th:each="order, status: ${orders.getContent()}">
 
-                                                <th:block th:if="${#lists.size(order.orderItemDtoList) >= 2}">
-                                                    <tr th:each="orderItem, status: ${order.orderItemDtoList}">
+                                                    <th:block th:if="${#lists.size(order.orderItemDtoList) >= 2}">
+                                                        <tr th:each="orderItem, status: ${order.orderItemDtoList}">
 
-                                                        <td th:if="${status.index == 0}"
-                                                            th:rowspan="${#lists.size(order.orderItemDtoList)}"
-                                                            th:text="${order.orderId}"></td>
+                                                            <td th:if="${status.index == 0}"
+                                                                th:rowspan="${#lists.size(order.orderItemDtoList)}"
+                                                                th:text="${order.orderId}"></td>
+                                                            <td class="thumb">
+                                                                <a th:href="${'/item/' + orderItem.itemId}">
+                                                                    <img th:src="${orderItem.imgUrl}">
+                                                                </a>
+                                                            </td>
+                                                            <td class="product left_top">
+                                                                <strong class="name">
+                                                                    <a th:href="${'/item/' + orderItem.itemId}"
+                                                                        th:text="${orderItem.itemNm}"></a>
+                                                                </strong>
+                                                                <div class="option">[옵션: 선택 X]</div>
+                                                            </td>
+                                                            <td th:text="${order.orderStatus}"></td>
+                                                            <td th:text="${order.buyerId}"></td>
+                                                            <td th:text="${order.orderDate}"></td>
+                                                            <td th:if="${status.index == 0}"
+                                                                th:rowspan="${#lists.size(order.orderItemDtoList)}">
+                                                                <button th:if="${order.orderStatus == orderStatus}"
+                                                                    class="black_btn_w65_h30" type="button"
+                                                                    th:value="${order.orderId}"
+                                                                    onclick="cancelOrder(this.value)">주문 취소</button>
+                                                                <div th:unless="${order.orderStatus == orderStatus}">취소
+                                                                    완료</div>
+                                                            </td>
+                                                        </tr>
+                                                    </th:block>
+
+                                                    <tr th:if="${#lists.size(order.orderItemDtoList) < 2}"
+                                                        th:each="orderItem, status: ${order.orderItemDtoList}">
+                                                        <td th:text="${order.orderId}"></td>
                                                         <td class="thumb">
                                                             <a th:href="${'/item/' + orderItem.itemId}">
                                                                 <img th:src="${orderItem.imgUrl}">
@@ -133,50 +164,25 @@
                                                         </td>
                                                         <td class="product left_top">
                                                             <strong class="name">
-                                                                <a th:href="${'/item/' + orderItem.itemId}" th:text="${orderItem.itemNm}"></a>
+                                                                <a th:href="${'/item/' + orderItem.itemId}"
+                                                                    th:text="${orderItem.itemNm}"></a>
                                                             </strong>
                                                             <div class="option">[옵션: 선택 X]</div>
                                                         </td>
                                                         <td th:text="${order.orderStatus}"></td>
                                                         <td th:text="${order.buyerId}"></td>
                                                         <td th:text="${order.orderDate}"></td>
-                                                        <td th:if="${status.index == 0}"
-                                                            th:rowspan="${#lists.size(order.orderItemDtoList)}">
+                                                        <td>
                                                             <button th:if="${order.orderStatus == orderStatus}"
-                                                                    class="black_btn_w65_h30" type="button"
-                                                                    th:value="${order.orderId}"
-                                                                    onclick="cancelOrder(this.value)">주문 취소</button>
-                                                            <div th:unless="${order.orderStatus == orderStatus}">취소 완료</div>
+                                                                class="black_btn_w65_h30" type="button"
+                                                                th:value="${order.orderId}"
+                                                                onclick="cancelOrder(this.value)">주문
+                                                                취소</button>
+                                                            <div th:unless="${order.orderStatus == orderStatus}">취소 완료
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                 </th:block>
-
-                                                <tr th:if="${#lists.size(order.orderItemDtoList) < 2}"
-                                                    th:each="orderItem, status: ${order.orderItemDtoList}">
-                                                    <td th:text="${order.orderId}"></td>
-                                                    <td class="thumb">
-                                                        <a th:href="${'/item/' + orderItem.itemId}">
-                                                            <img th:src="${orderItem.imgUrl}">
-                                                        </a>
-                                                    </td>
-                                                    <td class="product left_top">
-                                                        <strong class="name">
-                                                            <a th:href="${'/item/' + orderItem.itemId}" th:text="${orderItem.itemNm}"></a>
-                                                        </strong>
-                                                        <div class="option">[옵션: 선택 X]</div>
-                                                    </td>
-                                                    <td th:text="${order.orderStatus}"></td>
-                                                    <td th:text="${order.buyerId}"></td>
-                                                    <td th:text="${order.orderDate}"></td>
-                                                    <td>
-                                                        <button th:if="${order.orderStatus == orderStatus}"
-                                                                class="black_btn_w65_h30" type="button"
-                                                                th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문
-                                                            취소</button>
-                                                        <div th:unless="${order.orderStatus == orderStatus}">취소 완료</div>
-                                                    </td>
-                                                </tr>
-                                            </th:block>
                                             </tbody>
                                         </table>
                                     </div>
