--- a/src/main/resources/templates/review/reviewUpdate.html
+++ b/src/main/resources/templates/review/reviewUpdate.html
@@ -56,7 +56,7 @@
                                         </th>
                                         <td>
                                             <input class="title_input" type="text" th:field="*{title}">
-                                            <span class="text-danger title_warn">제목을 입력해주세요.</span>
+                                            <span class="text-danger title_warn_msg">제목을 입력해주세요.</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -76,7 +76,6 @@
                                                 <option value="4.5">4.5</option>
                                                 <option value="5.0">5.0</option>
                                             </select>
-                                            <span class="text-danger title_warn">평점을 입력해주세요.</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -85,7 +84,7 @@
                                         </th>
                                         <td>
                                             <textarea class="content_input" th:field="*{content}"></textarea>
-                                            <span class="text-danger content_warn">내용을 입력해주세요.</span>
+                                            <span class="text-danger content_warn_msg">내용을 입력해주세요.</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -94,7 +93,7 @@
                                         </th>
                                         <td>
                                             <input class="password_input" th:field="*{password}" type="password">
-                                            <span class="text-danger password_warn">비밀번호를 입력해주세요.</span>
+                                            <span class="text-danger password_warn_msg">비밀번호를 입력해주세요.</span>
                                         </td>
                                     </tr>
                                     </tbody>
@@ -124,52 +123,80 @@
                 let reviewId = [[${review.reviewId}]];
                 let password = [[${review.password}]];
 
-                if (confirm("리뷰를 수정하시겠습니까?")) {
+                /* 유효성 검사 통과유무 변수 */
+                let titleCheck = false;     // 제목 체크
+                let contentCheck = false;   // 내용 체크
 
-                    if ($(".password_input").val() === '') {
-                        alert("비밀번호를 입력하세요.");
-                    } else if ($(".password_input").val() === password) {
-                        let title = $(".title_input").val();
-                        let rating = $(".rating_select").val();
-                        let content = $(".content_input").val();
-                        let password = $(".password_input").val();
+                /* 입력값 변수 */
+                let titleVal = $('.title_input').val(); // 제목 입력란
+                let contentVal = $('.content_input').val(); // 내용 입력란
 
-                        param = {
-                            reviewId: reviewId,
-                            title: title,
-                            rating: rating,
-                            content: content,
-                            password: password
-                        }
-
-                        let paramData = JSON.stringify(param);
-
-                        $.ajax({
-                            url: "/review/update/" + reviewId,
-                            type: "PATCH",
-                            contentType: "application/json",
-                            dataType: "text",
-                            cache: false,
-                            data: paramData,
-                            success: function (result, status) {
-                                alert(result);
-                                location.href = '/reviews';
-                            },
-                            error: function (request, status, error) {
-                                if (request.status === '401') {
-                                    alert('로그인 후 이용해주세요.');
-                                    location.href = '/login';
-                                } else {
-                                    alert(request.responseText);
-                                }
-                            },
-                        });
-                    } else {
-                        alert("비밀번호가 일치하지 않습니다.");
-                    }
+                /* 제목 유효성 검사 */
+                if (titleVal === "") {
+                    $('.title_warn_msg').css('display', 'block')
+                    titleCheck = false;
                 } else {
-                    false;
+                    $('.title_warn_msg').css('display', 'none')
+                    titleCheck = true;
                 }
+
+                /* 내용 유효성 검사 */
+                if (contentVal === "") {
+                    $('.content_warn_msg').css('display', 'block')
+                    contentCheck = false;
+                } else {
+                    $('.content_warn_msg').css('display', 'none')
+                    contentCheck = true;
+                }
+
+                /* 최종 유효성 검사 */
+                if (titleCheck && contentCheck) {
+                    if (confirm("리뷰를 수정하시겠습니까?")) {
+                        if ($(".password_input").val() === '') {
+                            alert("비밀번호를 입력하세요.");
+                        } else if ($(".password_input").val() === password) {
+                            let title = $(".title_input").val();
+                            let rating = $(".rating_select").val();
+                            let content = $(".content_input").val();
+                            let password = $(".password_input").val();
+
+                            param = {
+                                reviewId: reviewId,
+                                title: title,
+                                rating: rating,
+                                content: content,
+                                password: password
+                            }
+
+                            let paramData = JSON.stringify(param);
+
+                            $.ajax({
+                                url: "/review/update/" + reviewId,
+                                type: "PATCH",
+                                contentType: "application/json",
+                                dataType: "text",
+                                cache: false,
+                                data: paramData,
+                                success: function (result, status) {
+                                    alert(result);
+                                    location.href = '/reviews';
+                                },
+                                error: function (request, status, error) {
+                                    if (request.status === '401') {
+                                        alert('로그인 후 이용해주세요.');
+                                        location.href = '/login';
+                                    } else {
+                                        alert(request.responseText);
+                                    }
+                                },
+                            });
+                        } else {
+                            alert("비밀번호가 일치하지 않습니다.");
+                        }
+                    }
+                    return false;
+                }
+                return false;
             });
 
             /* 취소 버튼 */
